// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceHealth renders all deployments down 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 0,
            "replicas": 0,
          },
          Object {
            "available": 0,
            "replicas": 0,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 1,
        },
      }
    }
    mode={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="error-circle-o"
          style={
            Object {
              "fontSize": "18px",
            }
          }
          title="Failure
No active deployment!"
          type="pf"
        />,
        " ",
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "error-circle-o",
          "style": Object {
            "fontSize": "18px",
          },
          "title": "Failure
No active deployment!",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      " ",
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="error-circle-o"
            style={
              Object {
                "fontSize": "18px",
              }
            }
            title="Failure
No active deployment!"
            type="pf"
          />,
          " ",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "error-circle-o",
            "style": Object {
              "fontSize": "18px",
            },
            "title": "Failure
No active deployment!",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        " ",
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServiceHealth renders all deployments down 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 0,
            "replicas": 0,
          },
          Object {
            "available": 0,
            "replicas": 0,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 1,
        },
      }
    }
    mode={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="error-circle-o"
          style={
            Object {
              "fontSize": "35px",
            }
          }
          title="Failure"
          type="pf"
        />,
        <br />,
        "No active deployment!",
        false,
      ],
      "style": Object {
        "color": "#cc0000",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "error-circle-o",
          "style": Object {
            "fontSize": "35px",
          },
          "title": "Failure",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "br",
      },
      "No active deployment!",
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="error-circle-o"
            style={
              Object {
                "fontSize": "35px",
              }
            }
            title="Failure"
            type="pf"
          />,
          <br />,
          "No active deployment!",
          false,
        ],
        "style": Object {
          "color": "#cc0000",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "error-circle-o",
            "style": Object {
              "fontSize": "35px",
            },
            "title": "Failure",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        "No active deployment!",
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServiceHealth renders both degraded 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "replicas": 10,
          },
          Object {
            "available": 2,
            "replicas": 10,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 10,
        },
      }
    }
    mode={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="warning-triangle-o"
          style={
            Object {
              "fontSize": "18px",
            }
          }
          title="Degraded
- Envoy health degraded
- Pod deployment degraded
- Pod deployment degraded"
          type="pf"
        />,
        " ",
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "warning-triangle-o",
          "style": Object {
            "fontSize": "18px",
          },
          "title": "Degraded
- Envoy health degraded
- Pod deployment degraded
- Pod deployment degraded",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      " ",
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="warning-triangle-o"
            style={
              Object {
                "fontSize": "18px",
              }
            }
            title="Degraded
- Envoy health degraded
- Pod deployment degraded
- Pod deployment degraded"
            type="pf"
          />,
          " ",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "warning-triangle-o",
            "style": Object {
              "fontSize": "18px",
            },
            "title": "Degraded
- Envoy health degraded
- Pod deployment degraded
- Pod deployment degraded",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        " ",
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServiceHealth renders both degraded 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "replicas": 10,
          },
          Object {
            "available": 2,
            "replicas": 10,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 10,
        },
      }
    }
    mode={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="warning-triangle-o"
          style={
            Object {
              "fontSize": "35px",
            }
          }
          title="Degraded"
          type="pf"
        />,
        <br />,
        false,
        <ul
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <li>
            Envoy health degraded
          </li>
          <li>
            Pod deployment degraded
          </li>
          <li>
            Pod deployment degraded
          </li>
        </ul>,
      ],
      "style": Object {
        "color": "#ec7a08",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "warning-triangle-o",
          "style": Object {
            "fontSize": "35px",
          },
          "title": "Degraded",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "br",
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              Envoy health degraded
            </li>,
            <li>
              Pod deployment degraded
            </li>,
            <li>
              Pod deployment degraded
            </li>,
          ],
          "style": Object {
            "padding": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "host",
            "props": Object {
              "children": "Envoy health degraded",
            },
            "ref": null,
            "rendered": "Envoy health degraded",
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": "Pod deployment degraded",
            },
            "ref": null,
            "rendered": "Pod deployment degraded",
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "host",
            "props": Object {
              "children": "Pod deployment degraded",
            },
            "ref": null,
            "rendered": "Pod deployment degraded",
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="warning-triangle-o"
            style={
              Object {
                "fontSize": "35px",
              }
            }
            title="Degraded"
            type="pf"
          />,
          <br />,
          false,
          <ul
            style={
              Object {
                "padding": 0,
              }
            }
          >
            <li>
              Envoy health degraded
            </li>
            <li>
              Pod deployment degraded
            </li>
            <li>
              Pod deployment degraded
            </li>
          </ul>,
        ],
        "style": Object {
          "color": "#ec7a08",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "warning-triangle-o",
            "style": Object {
              "fontSize": "35px",
            },
            "title": "Degraded",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                Envoy health degraded
              </li>,
              <li>
                Pod deployment degraded
              </li>,
              <li>
                Pod deployment degraded
              </li>,
            ],
            "style": Object {
              "padding": 0,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "host",
              "props": Object {
                "children": "Envoy health degraded",
              },
              "ref": null,
              "rendered": "Envoy health degraded",
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": "Pod deployment degraded",
              },
              "ref": null,
              "rendered": "Pod deployment degraded",
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "host",
              "props": Object {
                "children": "Pod deployment degraded",
              },
              "ref": null,
              "rendered": "Pod deployment degraded",
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServiceHealth renders deployments degraded 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "replicas": 10,
          },
          Object {
            "available": 2,
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 1,
        },
      }
    }
    mode={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="warning-triangle-o"
          style={
            Object {
              "fontSize": "18px",
            }
          }
          title="Degraded
Pod deployment degraded"
          type="pf"
        />,
        " ",
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "warning-triangle-o",
          "style": Object {
            "fontSize": "18px",
          },
          "title": "Degraded
Pod deployment degraded",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      " ",
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="warning-triangle-o"
            style={
              Object {
                "fontSize": "18px",
              }
            }
            title="Degraded
Pod deployment degraded"
            type="pf"
          />,
          " ",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "warning-triangle-o",
            "style": Object {
              "fontSize": "18px",
            },
            "title": "Degraded
Pod deployment degraded",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        " ",
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServiceHealth renders deployments degraded 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "replicas": 10,
          },
          Object {
            "available": 2,
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 1,
        },
      }
    }
    mode={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="warning-triangle-o"
          style={
            Object {
              "fontSize": "35px",
            }
          }
          title="Degraded"
          type="pf"
        />,
        <br />,
        "Pod deployment degraded",
        false,
      ],
      "style": Object {
        "color": "#ec7a08",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "warning-triangle-o",
          "style": Object {
            "fontSize": "35px",
          },
          "title": "Degraded",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "br",
      },
      "Pod deployment degraded",
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="warning-triangle-o"
            style={
              Object {
                "fontSize": "35px",
              }
            }
            title="Degraded"
            type="pf"
          />,
          <br />,
          "Pod deployment degraded",
          false,
        ],
        "style": Object {
          "color": "#ec7a08",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "warning-triangle-o",
            "style": Object {
              "fontSize": "35px",
            },
            "title": "Degraded",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        "Pod deployment degraded",
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServiceHealth renders deployments failure 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 0,
            "replicas": 10,
          },
          Object {
            "available": 2,
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 10,
        },
      }
    }
    mode={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="error-circle-o"
          style={
            Object {
              "fontSize": "18px",
            }
          }
          title="Failure
- Envoy health degraded
- Pod deployment failure"
          type="pf"
        />,
        " ",
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "error-circle-o",
          "style": Object {
            "fontSize": "18px",
          },
          "title": "Failure
- Envoy health degraded
- Pod deployment failure",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      " ",
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="error-circle-o"
            style={
              Object {
                "fontSize": "18px",
              }
            }
            title="Failure
- Envoy health degraded
- Pod deployment failure"
            type="pf"
          />,
          " ",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "error-circle-o",
            "style": Object {
              "fontSize": "18px",
            },
            "title": "Failure
- Envoy health degraded
- Pod deployment failure",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        " ",
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServiceHealth renders deployments failure 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 0,
            "replicas": 10,
          },
          Object {
            "available": 2,
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 10,
        },
      }
    }
    mode={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="error-circle-o"
          style={
            Object {
              "fontSize": "35px",
            }
          }
          title="Failure"
          type="pf"
        />,
        <br />,
        false,
        <ul
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <li>
            Envoy health degraded
          </li>
          <li>
            Pod deployment failure
          </li>
        </ul>,
      ],
      "style": Object {
        "color": "#cc0000",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "error-circle-o",
          "style": Object {
            "fontSize": "35px",
          },
          "title": "Failure",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "br",
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              Envoy health degraded
            </li>,
            <li>
              Pod deployment failure
            </li>,
          ],
          "style": Object {
            "padding": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "host",
            "props": Object {
              "children": "Envoy health degraded",
            },
            "ref": null,
            "rendered": "Envoy health degraded",
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": "Pod deployment failure",
            },
            "ref": null,
            "rendered": "Pod deployment failure",
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="error-circle-o"
            style={
              Object {
                "fontSize": "35px",
              }
            }
            title="Failure"
            type="pf"
          />,
          <br />,
          false,
          <ul
            style={
              Object {
                "padding": 0,
              }
            }
          >
            <li>
              Envoy health degraded
            </li>
            <li>
              Pod deployment failure
            </li>
          </ul>,
        ],
        "style": Object {
          "color": "#cc0000",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "error-circle-o",
            "style": Object {
              "fontSize": "35px",
            },
            "title": "Failure",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                Envoy health degraded
              </li>,
              <li>
                Pod deployment failure
              </li>,
            ],
            "style": Object {
              "padding": 0,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "host",
              "props": Object {
                "children": "Envoy health degraded",
              },
              "ref": null,
              "rendered": "Envoy health degraded",
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": "Pod deployment failure",
              },
              "ref": null,
              "rendered": "Pod deployment failure",
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServiceHealth renders envoy degraded 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "replicas": 1,
          },
          Object {
            "available": 2,
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 10,
        },
      }
    }
    mode={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="warning-triangle-o"
          style={
            Object {
              "fontSize": "18px",
            }
          }
          title="Degraded
Envoy health degraded"
          type="pf"
        />,
        " ",
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "warning-triangle-o",
          "style": Object {
            "fontSize": "18px",
          },
          "title": "Degraded
Envoy health degraded",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      " ",
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="warning-triangle-o"
            style={
              Object {
                "fontSize": "18px",
              }
            }
            title="Degraded
Envoy health degraded"
            type="pf"
          />,
          " ",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "warning-triangle-o",
            "style": Object {
              "fontSize": "18px",
            },
            "title": "Degraded
Envoy health degraded",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        " ",
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServiceHealth renders envoy degraded 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "replicas": 1,
          },
          Object {
            "available": 2,
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 10,
        },
      }
    }
    mode={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="warning-triangle-o"
          style={
            Object {
              "fontSize": "35px",
            }
          }
          title="Degraded"
          type="pf"
        />,
        <br />,
        "Envoy health degraded",
        false,
      ],
      "style": Object {
        "color": "#ec7a08",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "warning-triangle-o",
          "style": Object {
            "fontSize": "35px",
          },
          "title": "Degraded",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "br",
      },
      "Envoy health degraded",
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="warning-triangle-o"
            style={
              Object {
                "fontSize": "35px",
              }
            }
            title="Degraded"
            type="pf"
          />,
          <br />,
          "Envoy health degraded",
          false,
        ],
        "style": Object {
          "color": "#ec7a08",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "warning-triangle-o",
            "style": Object {
              "fontSize": "35px",
            },
            "title": "Degraded",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        "Envoy health degraded",
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServiceHealth renders envoy failure 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "replicas": 10,
          },
          Object {
            "available": 2,
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 0,
          "total": 10,
        },
      }
    }
    mode={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="error-circle-o"
          style={
            Object {
              "fontSize": "18px",
            }
          }
          title="Failure
- Envoy health failure
- Pod deployment degraded"
          type="pf"
        />,
        " ",
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "error-circle-o",
          "style": Object {
            "fontSize": "18px",
          },
          "title": "Failure
- Envoy health failure
- Pod deployment degraded",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      " ",
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="error-circle-o"
            style={
              Object {
                "fontSize": "18px",
              }
            }
            title="Failure
- Envoy health failure
- Pod deployment degraded"
            type="pf"
          />,
          " ",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "error-circle-o",
            "style": Object {
              "fontSize": "18px",
            },
            "title": "Failure
- Envoy health failure
- Pod deployment degraded",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        " ",
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServiceHealth renders envoy failure 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "replicas": 10,
          },
          Object {
            "available": 2,
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 0,
          "total": 10,
        },
      }
    }
    mode={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="error-circle-o"
          style={
            Object {
              "fontSize": "35px",
            }
          }
          title="Failure"
          type="pf"
        />,
        <br />,
        false,
        <ul
          style={
            Object {
              "padding": 0,
            }
          }
        >
          <li>
            Envoy health failure
          </li>
          <li>
            Pod deployment degraded
          </li>
        </ul>,
      ],
      "style": Object {
        "color": "#cc0000",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "error-circle-o",
          "style": Object {
            "fontSize": "35px",
          },
          "title": "Failure",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "br",
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              Envoy health failure
            </li>,
            <li>
              Pod deployment degraded
            </li>,
          ],
          "style": Object {
            "padding": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "host",
            "props": Object {
              "children": "Envoy health failure",
            },
            "ref": null,
            "rendered": "Envoy health failure",
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": "Pod deployment degraded",
            },
            "ref": null,
            "rendered": "Pod deployment degraded",
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="error-circle-o"
            style={
              Object {
                "fontSize": "35px",
              }
            }
            title="Failure"
            type="pf"
          />,
          <br />,
          false,
          <ul
            style={
              Object {
                "padding": 0,
              }
            }
          >
            <li>
              Envoy health failure
            </li>
            <li>
              Pod deployment degraded
            </li>
          </ul>,
        ],
        "style": Object {
          "color": "#cc0000",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "error-circle-o",
            "style": Object {
              "fontSize": "35px",
            },
            "title": "Failure",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                Envoy health failure
              </li>,
              <li>
                Pod deployment degraded
              </li>,
            ],
            "style": Object {
              "padding": 0,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "host",
              "props": Object {
                "children": "Envoy health failure",
              },
              "ref": null,
              "rendered": "Envoy health failure",
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": "Pod deployment degraded",
              },
              "ref": null,
              "rendered": "Pod deployment degraded",
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServiceHealth renders healthy 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "replicas": 1,
          },
          Object {
            "available": 2,
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 1,
        },
      }
    }
    mode={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="ok"
          style={
            Object {
              "fontSize": "18px",
            }
          }
          title="Healthy"
          type="pf"
        />,
        " ",
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "ok",
          "style": Object {
            "fontSize": "18px",
          },
          "title": "Healthy",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      " ",
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="ok"
            style={
              Object {
                "fontSize": "18px",
              }
            }
            title="Healthy"
            type="pf"
          />,
          " ",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "ok",
            "style": Object {
              "fontSize": "18px",
            },
            "title": "Healthy",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        " ",
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServiceHealth renders healthy 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "replicas": 1,
          },
          Object {
            "available": 2,
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 1,
        },
      }
    }
    mode={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="ok"
          style={
            Object {
              "fontSize": "35px",
            }
          }
          title="Healthy"
          type="pf"
        />,
        <br />,
        false,
        false,
      ],
      "style": Object {
        "color": "#3f9c35",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "ok",
          "style": Object {
            "fontSize": "35px",
          },
          "title": "Healthy",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "br",
      },
      false,
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="ok"
            style={
              Object {
                "fontSize": "35px",
              }
            }
            title="Healthy"
            type="pf"
          />,
          <br />,
          false,
          false,
        ],
        "style": Object {
          "color": "#3f9c35",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "ok",
            "style": Object {
              "fontSize": "35px",
            },
            "title": "Healthy",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        false,
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServiceHealth renders some scaled down deployment 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 0,
            "replicas": 0,
          },
          Object {
            "available": 2,
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 1,
        },
      }
    }
    mode={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="ok"
          style={
            Object {
              "fontSize": "18px",
            }
          }
          title="Healthy
One inactive deployment"
          type="pf"
        />,
        " ",
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "ok",
          "style": Object {
            "fontSize": "18px",
          },
          "title": "Healthy
One inactive deployment",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      " ",
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="ok"
            style={
              Object {
                "fontSize": "18px",
              }
            }
            title="Healthy
One inactive deployment"
            type="pf"
          />,
          " ",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "ok",
            "style": Object {
              "fontSize": "18px",
            },
            "title": "Healthy
One inactive deployment",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        " ",
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ServiceHealth renders some scaled down deployment 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceHealth
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 0,
            "replicas": 0,
          },
          Object {
            "available": 2,
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 1,
        },
      }
    }
    mode={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Icon
          name="ok"
          style={
            Object {
              "fontSize": "35px",
            }
          }
          title="Healthy"
          type="pf"
        />,
        <br />,
        "One inactive deployment",
        false,
      ],
      "style": Object {
        "color": "#3f9c35",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "name": "ok",
          "style": Object {
            "fontSize": "35px",
          },
          "title": "Healthy",
          "type": "pf",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "br",
      },
      "One inactive deployment",
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Icon
            name="ok"
            style={
              Object {
                "fontSize": "35px",
              }
            }
            title="Healthy"
            type="pf"
          />,
          <br />,
          "One inactive deployment",
          false,
        ],
        "style": Object {
          "color": "#3f9c35",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "ok",
            "style": Object {
              "fontSize": "35px",
            },
            "title": "Healthy",
            "type": "pf",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        "One inactive deployment",
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
